api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xgboost-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /xgboost-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: xgboost-api-service
                port:
                  number: 8080
